1.0

Big changes that required the rework:

* Mod no longer overrides damage (this means all other gear and spell mobs are compatible!)
* Talent tree is gone.
* Spells are now Skill Gems. 
* Mod no longer uses hidden hp values, vanilla hp now increases (this makes other hp gui mods compatible but be wary of those that display each heart, mobs will have lots of hearts)
* Gear now has local and global stats, local stats are weapon damage, armor etc. 
Think Path of exile 50 base armor + adds 20 to armor + 80% increased armor and the item totals it up.
* Gear rarities trimmed, now Common, Magical, Rare and Unique. Common complaint was that "Legendary" gear was sometimes too weak for the name.
New system doesn't have that issue, the rarity describes how rare it is now, not power level.

Added features:
* generated chests everywhere now have random loot in them
* added many new stats like attack speed, magic find, bonus damage to burning enemies etc.

To rework the mod, I needed an almost clean slate, and to trim a lot of content that I feel wasn't very successful (for the amount of effort it requires).
Other things were removed because I wanted to remove them, but I couldn't because I'd ruin existing worlds (*cough* master bag)

* removed all auto pickup bags except currency bag
* removed auto salvage bag
* removed charms and bracelets
* removed map dimensions
* removed runes and runewords
* removed sets 
* removed instability

Some of these will probably come back, after a rework. Others are gone for good.

Changed features:
* dimension configs are now datapacks
* entity configs are now datapacks
* damage increases are now totalled up before being applied. (this resulted in some insane damage multiplication)
* attack speed should work properly now
* bows now dont do full damage anymore on short charges
* changed hp regen to reduce saturation by % of total hp regenerated. This means more hp won't cost more saturation to regen.
* made unique gear datapacks more powerful